[package]
name = "example"
version = "0.1.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
into_query = { path="../into_query", version = '0.2.1', features = ['postgres'] } 
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
