[package]
name = "into_query"
version = "0.1.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["mysql"] }
into_query_derive = { version = "0.1.0", optional=true, path = "../into_query_derive" }

[features]
default = []
derive = [ "into_query_derive" ]