[package]
name = "into_query_derive"
version = "0.2.1"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"
description = "Provides a derive macro for IntoQuery"
repository = "https://github.com/charliethomson/into_query/tree/master/into_query_derive"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/into_query_derive/0.1.0/into_query_derive/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
diesel = { version = "1.4.5" }
syn = {version = "1.0", features = ["parsing", "proc-macro", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0.24"

[features]
mysql = [ "diesel/mysql" ]
postgres = [ "diesel/postgres" ]
sqlite = [ "diesel/sqlite" ]